force-app/main/default/objects/AlocacaoDesenvolvedor__c/AlocacaoDesenvolvedor__c.object-meta.xml
<CustomObject>
    <label>Alocação Desenvolvedor</label>
    <nameField>
        <displayFormat>AD - {0000}</displayFormat>
        <label>Alocação Desenvolvedor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alocação Desenvolvedores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>