force-app/main/default/objects/AlocacaoDesenvolvedor__c/fields/Desenvolvedor__c.field-meta.xml
<CustomField>
    <fullName>Desenvolvedor__c</fullName>
    <label>Desenvolvedor</label>
    <referenceTo>Desenvolvedor__c</referenceTo>
    <relationshipLabel>Alocação Desenvolvedores</relationshipLabel>
    <relationshipName>AlocacaoDesenvolvedores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>