force-app/main/default/objects/AlocacaoDesenvolvedor__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Alocação Desenvolvedores</relationshipLabel>
    <relationshipName>Aloca_o_Desenvolvedores</relationshipName>
    <type>Lookup</type>
</CustomField>